# attyr

./: .gitignore  Makefile  README.md  autogen.sh  configure.ac  generate.rb
codegen/: matrices.sh
inc/: matrices.h  rasterize.h  render.h  transform.h
samples/: Makefile  README.md  common.c  common.h  darray.c  darray.h  scene.c  tri.c  wavefront.c  wavefront.h
samples/assets/: Flower_Texture.raw  Ground_Texture.raw  Plant_Texture.raw  Scene.blend  Tree_Texture.raw  Wizard_Staff_Texture.raw  Wizard_Texture.raw  immenstadter_horn_1k.raw
samples/utils/: darray.c  helpers.c  helpers.h  wavefront.c  wavefront.h
src/: Makefile.am  attyr.h  main.c  matrices.c  matrices.h  rasterize.c  rasterize.h  render.c  render.h  short_names.h  transform.c  version.h.in
test/: Makefile.am  test_helpers.c  test_helpers.h  test_main.c  test_matrices.c  test_matrices.h  test_vectors.c
