lib_LTLIBRARIES = libattyr.la
libattyr_la_SOURCES = matrices.c matrices.h rasterize.c rasterize.h render.c render.h version.h
libattyr_la_CFLAGS = -Wall -O3 -ffast-math
libattyr_la_LDFLAGS = -version-info 0:0:0

attyrincludedir = $(includedir)/attyr
attyrinclude_HEADERS = attyr.h matrices.h rasterize.h render.h version.h short_names.h
